@@ -1,5 +1,11 @@
 2019-04-24  Jonathan Wakely  <jwakely@redhat.com>
 
+	PR libstdc++/90220
+	* include/std/any (__any_caster): Use remove_cv_t instead of decay_t.
+	Avoid a runtime check for types that can never be stored in std::any.
+	* testsuite/20_util/any/misc/any_cast.cc: Test std::any_cast with
+	array types.
+
 	PR libstdc++/90220 (partial)
 	* include/std/any (any_cast<T>(any*), any_cast<T>(const any*)): Do
 	not attempt ill-formed static_cast to pointers to non-object types.
